# yfrake

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: code-coverage.yml  codecov.yml  pypi-publish.yml  python-app.yml  workflow.yml
docs/source/: conf.py  index.rst
docs/source/client/: async_mode_examples.rst  client_reference.rst  client_usage.rst  getting_started.rst  overview.rst  response_reference.rst  sync_mode_examples.rst
docs/source/client/examples/: async_mode_examples.rst  decorator_examples.rst  index.rst  sync_mode_examples.rst  various_examples.rst
docs/source/client/reference/: async_results_reference.rst  client_reference.rst  client_response_reference.rst  index.rst  thread_results_reference.rst
docs/source/config/: config_examples.rst  config_file.rst  config_overview.rst  config_reference.rst
docs/source/overview/: description.rst  getting_started.rst
docs/source/pages/: server_usage_guide.rst
docs/source/server/: server_examples.rst  server_overview.rst  server_reference.rst  server_usage_examples.rst
docs/source/yfrake/: caching.rst  description.rst  endpoints.rst  getting_started.rst
tests/: bad_queries.py  good_queries.py  test_bad_queries.py  test_base_response.py  test_batch_get.py  test_client.py  test_client_response.py  test_endpoints.py  test_get_all.py  test_good_queries.py  test_openapi.py  test_runner.py  test_server.py  test_server_utils.py  test_validate_and_sanitize.py  test_validate_request.py  test_validate_response.py  test_validator.py
tests/test_cache/: test_cache.py  test_utils.py
tests/test_client/: test_batch_get.py  test_client.py  test_client_cache.py  test_endpoints.py  test_get_all.py
tests/test_client/queries/: good_queries.py
tests/test_config/: test_base_config.py  test_config.py  test_config_validator.py
tests/test_config/config_files/: bad_field_type.ini  good_config.ini  missing_field.ini  missing_section.ini
tests/test_other/: test_openapi.py  test_validate_request.py  test_validate_response.py
tests/test_return_types/: test_base_response.py  test_client_response.py
tests/test_server/: test_runner.py  test_server.py
yfrake/: CHANGELOG.md  __init__.py  __main__.py
yfrake/cache/: __init__.py  cache.py  const.py  utils.py
yfrake/client/: __init__.py  async_client.py  base_response.py  base_worker.py  cache.py  client.py  client_response.py  decorator.py  endpoints.py  exceptions.py  get_all_queries.py  paths.py  response.py  session.py  sync_client.py  thread_client.py  thread_loop.py  utils.py  validator.py  validators.py  worker.py
yfrake/client/return_types/: __init__.py  access_controller.py  async_results.py  base_response.py  base_results.py  client_response.py  thread_results.py
yfrake/config/: __init__.py  base_config.py  config.py  helpers.py  utils.py  validator.py  yfrake_settings.ini
yfrake/openapi/: components.py  generator.py  utils.py  yfrake_spec.yaml
yfrake/openapi/modules/: __init__.py  balance_statements.py  calendar_events.py  detailed_summary.py  earnings_history.py  esg_scores.py  fund_ownership.py  historical_prices.py  income_statements.py  insider_transactions.py  institution_ownership.py  key_statistics.py  market_summary.py  news.py  price_overview.py  quote_type.py  quotes_overview.py  recommendation_trend.py  trending_symbols.py
yfrake/openapi/specs/: __init__.py  cashflow_statements.py  company_overview.py  currencies.py  earnings.py  earnings_trend.py  esg_chart.py  financials.py  insider_holders.py  insights.py  key_stats.py  major_holders.py  options.py  purchase_activity.py  ratings_history.py  recommendations.py  sec_filings.py  shares_outstanding.py  validate_symbols.py
yfrake/server/: __init__.py  handler.py  handlers.py  helpers.py  runner.py  server.ini  server.py  utils.py
